WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274235
REGRESSION (
278793@main
): Text invisible after a UnifiedTextReplacement session ends
https://bugs.webkit.org/show_bug.cgi?id=274235
Summary
REGRESSION (278793@main): Text invisible after a UnifiedTextReplacement sessi...
Aditya Keerthi
Reported
2024-05-15 17:26:38 PDT
rdar://128166540
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-05-15 17:30:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28631
EWS
Comment 2
2024-05-15 18:05:28 PDT
Committed
278843@main
(188341d50819): <
https://commits.webkit.org/278843@main
> Reviewed commits have been landed. Closing PR #28631 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug