REGRESSION (278793@main): Text invisible after a UnifiedTextReplacement session ends https://bugs.webkit.org/show_bug.cgi?id=274235 rdar://128166540

Reviewed by Wenson Hsieh and Abrar Rahman Protyasha.

278793@main refactored the logic to restore text visibility. However, by moving
the logic to end of `UnifiedTextReplacementController::didEndTextReplacementSession`,
all other state was already cleared, making `removeTransparentMarkersForSession`
a no-op.

Fix by removing the transparency markers first.

* Source/WebKit/WebProcess/WebPage/Cocoa/UnifiedTextReplacementController.mm:
(WebKit::UnifiedTextReplacementController::didEndTextReplacementSession):

Canonical link: https://commits.webkit.org/278843@main